changed repo url

--- a/kohya_ss_colab.ipynb
+++ b/kohya_ss_colab.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -11,6 +12,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "MvroZ9rJ1iqN"
@@ -29,6 +31,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DrAnm1um5vjh"
@@ -66,6 +69,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mvQwnr4354BM"
@@ -131,7 +135,7 @@
         "\n",
         "    %mkdir -p /content/gdrive/MyDrive/sd\n",
         "    %cd /content/gdrive/MyDrive/sd\n",
-        "    !git clone https://github.com/panguin6010/kohya_ss_google_colab kohya_ss_colab\n",
+        "    !git clone https://github.com/prookyon/kohya_ss.git kohya_ss_colab\n",
         "    !mkdir -p /content/gdrive/MyDrive/sd/kohya_ss_colab/cache/huggingface\n",
         "    !ln -s /content/gdrive/MyDrive/sd/kohya_ss_colab/cache/huggingface /root/.cache/\n",
         "\n",
@@ -150,6 +154,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8SrMhmFz7Lt4"
@@ -203,6 +208,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FLDvlHm1tYud"
